--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+  apiKey: "AIzaSyDLy2IK6BtQoWEIrssRHh0xz2KMIrWdTI8",
+  authDomain: "fichinha-83522.firebaseapp.com",
+  projectId: "fichinha-83522",
+  storageBucket: "fichinha-83522.appspot.com",
+  messagingSenderId: "36121238648",
+  appId: "1:36121238648:web:c6f132e8178377de69618d"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
